# openats

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: vercel.yaml
data/: search.sql
data/parquet/: ats.parquet  companies.parquet  jobs_recent.parquet  watchlists.parquet
data/parquet/companies_by_ats/: ashby.parquet  avature.parquet  bamboohr.parquet  breezy.parquet  cornerstone.parquet  eightfold.parquet  gem.parquet  greenhouse.parquet  icims.parquet  infojobs_es.parquet  jazzhr.parquet  jobs_cz.parquet  lever.parquet  mercor.parquet  oracle.parquet  personio.parquet  phenom.parquet  pinpoint.parquet  recruitee.parquet  recruiterbox.parquet  rippling.parquet  smartrecruiters.parquet  successfactors.parquet  taleo.parquet  teamtailor.parquet  workable.parquet  workday.parquet
data/parquet/jobs_by_company/: 0g.parquet  0x.parquet  10-4-truck-recruiting.parquet  100mega-distribution-s-r-o.parquet  10alabs.parquet  10web.parquet  10xfounders-jobs-personio-com.parquet  10xgenomics.parquet  10xteam.parquet  115ventures.parquet  1199seiu-funds.parquet  11x-ai.parquet  12build.parquet  12twenty.parquet  142designgroup.parquet  143studiosinc.parquet  1440-foods-manufacturing.parquet  15-p-edn-hl-dka-royal-rangers-mari-nsk-l-zn.parquet  1618-luxor-gold-holding-sl.parquet  1800contacts.parquet  1800gotjunk.parquet  1csc-a-s.parquet  1komma5.parquet  1komma5grad-jobs-personio-com.parquet  1lattice.parquet  1mind.parquet  1password.parquet  1stopbedrooms.parquet  1x.parquet  2020companies.parquet  2026-inmo-augusta-sl.parquet  21-consult-group-s-r-o.parquet  21shares.parquet  22hlav-s-r-o.parquet  2bc11c2c7us.parquet  2jcp-a-s.parquet  2k-construction-solutions-s-r-o.parquet  2k-czech-s-r-o.parquet  2k.parquet  2n-telekomunikace-a-s.parquet  (+14440 more)
data/parquet/jobs_by_watchlist/: fortune500.parquet
data/parquet/watchlist/: 1000.parquet  2000.parquet  500.parquet
src/: app.py  cli.py  config.py  discovery.py  exceptions.py  producer.py  signals.py  workers.py
src/database/: database.py  parquet.py
src/services/: __init__.py  _base.py  _browserbase.py  _cloakbrowser.py  _helpers.py  _models.py  amazon.py  apple.py  arbetsformedlingen.py  ashby.py  avature.py  bamboohr.py  breezy.py  builtin.py  bundesagentur.py  cornerstone.py  eightfold.py  eures.py  gem.py  getonbrd.py  google.py  greenhouse.py  icims.py  infojobs_es.py  jazzhr.py  jobs_cz.py  jobsch.py  join_com.py  lever.py  manfred.py  mercor.py  meta.py  oracle.py  personio.py  phenom.py  pinpoint.py  programathor.py  recruitee.py  recruiterbox.py  remoteok.py  (+17 more)
src/utils/: countries.py  derived.py  logger.py  normalize.py  serialize.py
tests/: conftest.py  test_exceptions.py
tests/services/: test_apple.py  test_ashby.py  test_avature.py  test_bamboohr.py  test_breezy.py  test_builtin.py  test_bundesagentur.py  test_cloakbrowser_helper.py  test_cornerstone.py  test_description_api.py  test_eightfold.py  test_eures_gather.py  test_eures_parse.py  test_getonbrd.py  test_google.py  test_greenhouse.py  test_icims.py  test_infojobs_es.py  test_jazzhr.py  test_jobs_cz.py  test_jobsch.py  test_lever.py  test_manfred.py  test_mercor.py  test_meta.py  test_models.py  test_phenom.py  test_pinpoint.py  test_programathor.py  test_recruitee.py  test_recruiterbox.py  test_remoteok.py  test_scrapers.py  test_scrapers_extra.py  test_successfactors.py  test_taleo.py  test_teamtailor.py  test_tesla.py  test_thehub.py  test_wanted.py  (+4 more)
tests/utils/: test_countries.py  test_enrichment.py
