[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openats-py"
version = "0.1.0"
description = "Job collector pipeline for ATS platforms"
readme = "README.md"
license = { text = "MIT" }
authors = []
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "libsql>=0.1",
    "sqlite-web>=0.7.2",
]

[project.optional-dependencies]
collectors = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "html2text>=2024.0",
    # TLS+h2 impersonation client used as the cheap fallback when an ATS
    # load balancer 406-blocks plain httpx (Avature, JazzHR, Eightfold).
    # 1.6.x ships fingerprint refreshes that fix recent breakages.
    "httpcloak>=1.6",
    # Stealth-patched Chromium used by Tesla / Meta (Akamai bot manager
    # blocks every cheaper fingerprint — httpcloak, curl_cffi, even
    # Browserbase Sessions). cloakbrowser ships its own binary and
    # caches under ~/.cache/cloakbrowser, no separate playwright install.
    "cloakbrowser>=0.3",
    "playwright>=1.40",
]
parquet = [
    "pyarrow>=15.0",
]
publish = [
    "pyarrow>=15.0",
]
dev = [
    "openats-py[collectors,parquet,publish]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs",
]

[project.urls]
Dataset = "https://storage.stapply.ai/openats/v1/manifest.json"

[project.scripts]
openats = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# RUF001/2/3: tolerate Unicode dashes/quotes that real ATS payloads contain.
# RUF046: harmless `int(int_already)` calls happen in defensive casts.
ignore = ["E501", "RUF001", "RUF002", "RUF003", "RUF046"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["httpx_mock"]
addopts = "-ra --strict-markers"
